--- a/playback.ui
+++ b/playback.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>pb</class>
- <widget class="QMainWindow" name="pb">
+ <widget class="QMainWindow" name="playback">
   <property name="geometry">
    <rect>
     <x>0</x>
