--- a/toolswindow.ui
+++ b/toolswindow.ui
@@ -15,7 +15,33 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="4" column="0">
+    <item row="0" column="1" rowspan="6">
+     <widget class="QWidget" name="tool_window_controls" native="true">
+      <layout class="QGridLayout" name="gridLayout_2">
+       <item row="0" column="0">
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
+     </widget>
+    </item>
+    <item row="2" column="0">
+     <widget class="QPushButton" name="show_rename">
+      <property name="text">
+       <string>Rename Show</string>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="0">
      <spacer name="verticalSpacer">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
@@ -35,36 +61,17 @@
       </property>
      </widget>
     </item>
-    <item row="2" column="0">
-     <widget class="QPushButton" name="show_rename">
-      <property name="text">
-       <string>Rename Show</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="1" rowspan="5">
-     <widget class="QWidget" name="tool_window_controls" native="true">
-      <layout class="QGridLayout" name="gridLayout_2">
-       <item row="0" column="0">
-        <spacer name="horizontalSpacer">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-      </layout>
-     </widget>
-    </item>
     <item row="3" column="0">
      <widget class="QPushButton" name="dbg">
       <property name="text">
-       <string>debug</string>
+       <string>File Reconciliation</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="0">
+     <widget class="QPushButton" name="show_images">
+      <property name="text">
+       <string>Find Images</string>
       </property>
      </widget>
     </item>
