replace is working
added some todos, locate/rename as placeholders. Move locate files
functionality from toolswindow.cpp to locate.cpp same as eg replace.cpp

--- a/src/toolswindow.ui
+++ b/src/toolswindow.ui
@@ -11,32 +11,11 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Tools</string>
+   <string>Whitebox Media Library Tools</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="4" column="0">
-     <widget class="QPushButton" name="show_images">
-      <property name="text">
-       <string>Find Images</string>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="0">
-     <widget class="QPushButton" name="dbg">
-      <property name="text">
-       <string>File Reconciliation</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="0">
-     <widget class="QPushButton" name="build_index">
-      <property name="text">
-       <string>locate files</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="2" rowspan="7">
+    <item row="0" column="2" rowspan="9">
      <widget class="QWidget" name="tool_window_controls" native="true">
       <layout class="QGridLayout" name="gridLayout_2">
        <item row="0" column="0">
@@ -55,14 +34,67 @@
       </layout>
      </widget>
     </item>
-    <item row="2" column="0">
-     <widget class="QPushButton" name="show_rename">
-      <property name="text">
-       <string>Rename Show</string>
+    <item row="0" column="0">
+     <widget class="QFrame" name="frame">
+      <property name="maximumSize">
+       <size>
+        <width>125</width>
+        <height>16777215</height>
+       </size>
       </property>
+      <property name="frameShape">
+       <enum>QFrame::StyledPanel</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Raised</enum>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="QLabel" name="label">
+         <property name="text">
+          <string>Tools</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="show_rename">
+         <property name="text">
+          <string>Rename Show</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="build_index">
+         <property name="text">
+          <string>locate files</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="dbg">
+         <property name="text">
+          <string>File Reconciliation</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="show_images">
+         <property name="text">
+          <string>Find Images</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="replace">
+         <property name="text">
+          <string>replace file</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </widget>
     </item>
-    <item row="6" column="0">
+    <item row="8" column="0">
      <spacer name="verticalSpacer">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
@@ -75,14 +107,7 @@
       </property>
      </spacer>
     </item>
-    <item row="5" column="0">
-     <widget class="QPushButton" name="replace">
-      <property name="text">
-       <string>replace file</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="1" rowspan="7">
+    <item row="0" column="1" rowspan="9">
      <widget class="Line" name="line">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
